pkg/front_end/testcases/bug32414a.dart.strong.transformed.expect
library;
import self as self;
import "dart:core" as core;

static method test() → void {
  dynamic a = 5;
  core::String b = a.{core::Object::toString}();
  b = let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/bug32414a.dart:10:7: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.
  b = 42;
      ^" in 42 as{TypeError} core::String;
}
static method main() → void {}
